--- a/service/pom.xml
+++ b/service/pom.xml
@@ -90,7 +90,7 @@
                                         implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.bazaarvoice.weatherpro.service.WeatherproService</mainClass>
+                                    <mainClass>com.amunna.weatherpro.service.WeatherproService</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
