--- a/service/src/main/conf/config.default.yaml
+++ b/service/src/main/conf/config.default.yaml
@@ -5,7 +5,7 @@ dataCollectHost:
   port: 8090
 
 targetData:
-  targetTable: yahooweathercompiled
+  targetTable: avgtest1
   targetColumnFamily: temperature
 
 http:
